--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,10 +45,10 @@ android {
         applicationId "com.hugedreamhd.todolist"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        versionCode 2
+        versionName "1.0.0+2"
     }
 
     buildTypes {
